Changed font and corrected text alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400&display=swap');
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Inter', sans-serif;
     color: white;
 }
 
@@ -36,25 +36,26 @@ body {
 }
 
 .flex-item {
-    font-size: 2rem;
-    font-weight: 300;
+    font-size: 1rem;
+    font-weight: 400;
     margin-right: 15px;
 }
 
 .city {
     margin-top: 33px;
+    text-align: center;
 }
 
 .city h1 {
-    font-size: 4rem;
+    font-size: 3.5rem;
 }
 
 .city small {
-    font-size: 22px;
+    font-size: 18px;
 }
 
 #temp {
-    font-size: 9rem;
+    font-size: 8rem;
 }
 
 .title {
@@ -107,8 +108,8 @@ input {
 }
 
 .cities h2 {
-    margin: 2rem 0 2rem 4rem;
-    font-size: 1.4rem;
+    margin: 2rem 0 2rem 0;
+    font-size: 1.2rem;
 }
 
 .weather-details {
